--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,32 +4,71 @@ events { worker_connections 1024; }
 
 http {
 
-    sendfile on;
+   sendfile on;
 
-    #ssl                       on;
-    ssl_certificate           /etc/letsencrypt/live/www.msia17conferences.com/cert.pem;
-    ssl_certificate_key       /etc/letsencrypt/live/www.msia17conferences.com/privkey.pem;
+   server {
+      listen 80;
+      server_name www.msia17conferences.com;
 
-    server {
-        listen 80;
-        server_name www.msia17conferences.com;
-        return 301 https://msia17conferences.com$request_uri;
-    }
-    server {
-        listen 443 ssl;
-        server_name www.msia17conferences.com;
-        return 301 https://msia17conferences.com$request_uri;
-    }
+      return 301 https://msia17conferences.com$request_uri;
+   }
 
-    server {
+   server {
+      listen 443 ssl;
+      server_name www.msia17conferences.com;
+      return 301 https://msia17conferences.com$request_uri;
+   }
 
-        listen 443; 
-        server_name msia17conferences.com;
+   server {
 
-        location /portainer/ {
-            proxy_pass https://portainer:9000/;
-        }
+      listen 443 default ssl; 
+      server_name msia17conferences.com;
 
-    }  
+      # ssl                       on;
+      ssl_certificate_key       /etc/letsencrypt/live/www.msia17conferences.com/privkey.pem;
+      ssl_certificate           /etc/letsencrypt/live/www.msia17conferences.com/cert.pem;
+
+      proxy_set_header   Host                 $host;
+      proxy_set_header   X-Real-IP            $remote_addr;
+      proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
+      proxy_set_header   X-Forwarded-Proto    $scheme;
+
+      location /portainer/ {
+         proxy_pass https://portainer:9000/;
+      }
+      location ^~ /jenkins/ {
+ 
+         # Convert inbound WAN requests for https://domain.tld/jenkins/ to 
+         # local network requests for http://10.0.0.100:8080/jenkins/
+         proxy_pass http://jenkins:8080/jenkins/;
+            
+         # Rewrite HTTPS requests from WAN to HTTP requests on LAN
+         proxy_redirect http:// https://;
+   
+         # The following settings from https://wiki.jenkins-ci.org/display/JENKINS/Running+Hudson+behind+Nginx
+         sendfile off;
+   
+         proxy_set_header   Host             $host:$server_port;
+         proxy_set_header   X-Real-IP        $remote_addr;
+         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+         proxy_max_temp_file_size 0;
+   
+         # This is the maximum upload size
+         client_max_body_size       10m;
+         client_body_buffer_size    128k;
+   
+         proxy_connect_timeout      90;
+         proxy_send_timeout         90;
+         proxy_read_timeout         90;
+   
+         proxy_temp_file_write_size 64k;
+   
+         # Required for new HTTP-based CLI
+         proxy_http_version 1.1;
+         proxy_request_buffering off;
+         proxy_buffering off; # Required for HTTP-based CLI to work over SSL
+      }
+
+   }  
 
 }
