--- a/nginx/docker-compose.yml
+++ b/nginx/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: nginx:latest
     container_name: nginx
     hostname: nginx
+    restart: always
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
       - cert-handler_certbot-letsencrypt:/etc/letsencrypt
