--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -28,14 +28,22 @@ http {
       ssl_certificate_key       /etc/letsencrypt/live/www.msia17conferences.com/privkey.pem;
       ssl_certificate           /etc/letsencrypt/live/www.msia17conferences.com/cert.pem;
 
-      proxy_set_header   Host                 $host;
-      proxy_set_header   X-Real-IP            $remote_addr;
-      proxy_set_header   X-Forwarded-For      $proxy_add_x_forwarded_for;
-      proxy_set_header   X-Forwarded-Proto    $scheme;
+      
 
       location /portainer/ {
          proxy_pass https://portainer:9000/;
       }
+
+      location /dev/ {
+         proxy_set_header Host $host;
+         proxy_set_header Upgrade    $http_upgrade;
+         proxy_set_header Connection $http_connection;
+         #try_files $uri $uri/ =404;
+         proxy_pass https://ng_conf:4200/;
+         proxy_http_version 1.1;
+         proxy_cache_bypass $http_upgrade;
+      }
+
       location ^~ /jenkins/ {
  
          # Convert inbound WAN requests for https://domain.tld/jenkins/ to 
