--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,8 +33,21 @@ http {
       location /portainer/ {
          proxy_pass https://portainer:9000/;
       }
+      
+      location ^~ /sonar/ {
+         proxy_pass http://sonarqube:9000/sonar/;
+      }
+      
+      location /pgadmin {
+         proxy_pass http://pg_admin:80/;
+         proxy_redirect http:// $scheme://;
+         proxy_set_header Host $http_host;
+         proxy_set_header X-Real-IP $remote_addr;
+         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+         proxy_set_header X-Script-Name /pgadmin;
+      }
 
-      location /dev/ {
+      location ^~ /dev/ {
          proxy_set_header Host $host;
          proxy_set_header Upgrade    $http_upgrade;
          proxy_set_header Connection $http_connection;
