--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -26,18 +26,40 @@ http {
 
       # ssl                       on;
       ssl_certificate_key       /etc/letsencrypt/live/www.msia17conferences.com/privkey.pem;
-      ssl_certificate           /etc/letsencrypt/live/www.msia17conferences.com/cert.pem;
+      ssl_certificate           /etc/letsencrypt/live/www.msia17conferences.com/cert.pem;      
 
-      
 
-      location /portainer/ {
+      location ^~ /portainer/ {
          proxy_pass https://portainer:9000/;
       }
       
+      location  /minio {
+         client_max_body_size 0;
+
+         proxy_http_version 1.1;
+         proxy_set_header Host $http_host;
+         proxy_ssl_session_reuse on; # enable this if you are internally connecting over SSL
+         proxy_read_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
+         proxy_send_timeout 15m; # Default value is 60s which is not sufficient for MinIO.
+         proxy_request_buffering off; # Disable any internal request bufferring.
+         proxy_pass http://minio:9000/minio;
+         # health_check uri=/minio/health/ready;
+      }
+
+      location ^~ /minio_api/ {
+         proxy_set_header Host $host;
+         proxy_set_header Upgrade    $http_upgrade;
+         proxy_set_header Connection $http_connection;
+         #try_files $uri $uri/ =404;
+         proxy_pass http://minio_api:9010/;
+         proxy_http_version 1.1;
+         proxy_cache_bypass $http_upgrade;
+      }
+
       location ^~ /sonar/ {
          proxy_pass http://sonarqube:9000/sonar/;
       }
-      
+
       location /pgadmin {
          proxy_pass http://pg_admin:80/;
          proxy_redirect http:// $scheme://;
