added upload conferences

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
       # ssl                       on;
       ssl_certificate_key       /etc/letsencrypt/live/www.msia17conferences.com/privkey.pem;
       ssl_certificate           /etc/letsencrypt/live/www.msia17conferences.com/cert.pem;      
-
+      ignore_invalid_headers off;
 
       location ^~ /portainer/ {
          proxy_pass https://portainer:9000/;
@@ -68,13 +68,23 @@ http {
          proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
          proxy_set_header X-Script-Name /pgadmin;
       }
-
+# 
       location ^~ /dev/ {
          proxy_set_header Host $host;
          proxy_set_header Upgrade    $http_upgrade;
          proxy_set_header Connection $http_connection;
          #try_files $uri $uri/ =404;
          proxy_pass https://ng_conf:4200/;
+         proxy_http_version 1.1;
+         proxy_cache_bypass $http_upgrade;
+      }
+
+      location ^~ /upload-conferences/ {
+         # proxy_redirect http:// $scheme://;
+         proxy_set_header Host $host;
+         proxy_set_header Upgrade    $http_upgrade;
+         proxy_set_header Connection $http_connection;
+         proxy_pass https://upload_conferences:4200/;
          proxy_http_version 1.1;
          proxy_cache_bypass $http_upgrade;
       }
