--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -79,6 +79,16 @@ http {
          proxy_cache_bypass $http_upgrade;
       }
 
+      location ^~ /espace_admin/ {
+         # proxy_redirect http:// $scheme://;
+         proxy_set_header Host $host;
+         proxy_set_header Upgrade    $http_upgrade;
+         proxy_set_header Connection $http_connection;
+         proxy_pass https://espace_admin:4200/;
+         proxy_http_version 1.1;
+         proxy_cache_bypass $http_upgrade;
+      }
+
       location ^~ /jenkins/ {
  
          # Convert inbound WAN requests for https://domain.tld/jenkins/ to 
