temporarly removing unused services

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -46,9 +46,9 @@ http {
          # health_check uri=/minio/health/ready;
       }
 
-      location ^~ /sonar/ {
-         proxy_pass http://sonarqube:9000/sonar/;
-      }
+      # location ^~ /sonar/ {
+      #    proxy_pass http://sonarqube:9000/sonar/;
+      # }
 
       location /pgadmin {
          proxy_pass http://pg_admin:80/;
@@ -89,38 +89,38 @@ http {
          proxy_cache_bypass $http_upgrade;
       }
 
-      location ^~ /jenkins/ {
+      # location ^~ /jenkins/ {
  
-         # Convert inbound WAN requests for https://domain.tld/jenkins/ to 
-         # local network requests for http://10.0.0.100:8080/jenkins/
-         proxy_pass http://jenkins:8080/jenkins/;
+      #    # Convert inbound WAN requests for https://domain.tld/jenkins/ to 
+      #    # local network requests for http://10.0.0.100:8080/jenkins/
+      #    proxy_pass http://jenkins:8080/jenkins/;
             
-         # Rewrite HTTPS requests from WAN to HTTP requests on LAN
-         proxy_redirect http:// https://;
+      #    # Rewrite HTTPS requests from WAN to HTTP requests on LAN
+      #    proxy_redirect http:// https://;
    
-         # The following settings from https://wiki.jenkins-ci.org/display/JENKINS/Running+Hudson+behind+Nginx
-         sendfile off;
+      #    # The following settings from https://wiki.jenkins-ci.org/display/JENKINS/Running+Hudson+behind+Nginx
+      #    sendfile off;
    
-         proxy_set_header   Host             $host:$server_port;
-         proxy_set_header   X-Real-IP        $remote_addr;
-         proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
-         proxy_max_temp_file_size 0;
+      #    proxy_set_header   Host             $host:$server_port;
+      #    proxy_set_header   X-Real-IP        $remote_addr;
+      #    proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+      #    proxy_max_temp_file_size 0;
    
-         # This is the maximum upload size
-         client_max_body_size       10m;
-         client_body_buffer_size    128k;
+      #    # This is the maximum upload size
+      #    client_max_body_size       10m;
+      #    client_body_buffer_size    128k;
    
-         proxy_connect_timeout      90;
-         proxy_send_timeout         90;
-         proxy_read_timeout         90;
+      #    proxy_connect_timeout      90;
+      #    proxy_send_timeout         90;
+      #    proxy_read_timeout         90;
    
-         proxy_temp_file_write_size 64k;
+      #    proxy_temp_file_write_size 64k;
    
-         # Required for new HTTP-based CLI
-         proxy_http_version 1.1;
-         proxy_request_buffering off;
-         proxy_buffering off; # Required for HTTP-based CLI to work over SSL
-      }
+      #    # Required for new HTTP-based CLI
+      #    proxy_http_version 1.1;
+      #    proxy_request_buffering off;
+      #    proxy_buffering off; # Required for HTTP-based CLI to work over SSL
+      # }
 
    }  
 
